<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accident_recognition_main_screen_background"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/main_activity_display_layout_with_border"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/Base.TextAppearance.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/accident_recognition_accelerometer_values" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/accident_recognition_x_displayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accident_recognition_x"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/accident_recognition_x_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="5"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/accident_recognition_y_displayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accident_recognition_y"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/accident_recognition_y_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="5"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/accident_recognition_z_displayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accident_recognition_z"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/accident_recognition_z_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="5"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context="${relativePackage}.${activityClass}" >

        <ImageButton
            android:id="@+id/detector_service_trigger"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="61dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/start_button_selector"
            android:contentDescription="@string/accident_recognition_app_description"
            android:src="@drawable/start" />

        <ImageButton
            android:id="@+id/detector_service_destroyer"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignTop="@+id/detector_service_trigger"
            android:layout_marginLeft="48dp"
            android:layout_toRightOf="@+id/detector_service_trigger"
            android:background="@drawable/stop_button_selector"
            android:contentDescription="@string/accident_recognition_app_description"
            android:src="@drawable/stop" />
    </RelativeLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/contact_configure"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/settings_button_selector"
            android:contentDescription="@string/accident_recognition_app_description"
            android:src="@drawable/settings" />
    </TableRow>

</LinearLayout>